refactor skill section UI styles

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         rel="stylesheet">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" href="css/style.production.css">
+    <!-- <link rel="stylesheet" href="css/style.production.css"> -->
+    <link rel="stylesheet" href="css/styles.css">
     <script src="js/scripts.js" defer></script>
 
 </head>
@@ -225,17 +226,98 @@
                 <div class="career-column">
                     <div class="right-column">
                         <div class="skills-header">
-                            <h3>Career</h3>
+                            <h3>My Career</h3>
                             <p>I have an M.Sc. in Applied Computer Science and
                                 specialized in full-stack web development
                                 through
                                 CareerFoundry's 900+ hours program.</p>
                         </div>
-
                         <div class="career experience">
-                            <h3>Experience</h3>
+                            <!-- <h3>Experience</h3> -->
                             <div class="contents">
-                                <ul>
+
+                                <div class="timeline">
+                                    <h3>Experience</h3>
+                                    <div class="career_container right">
+                                        <div class="content">
+                                            <span class="period">2023</span>
+                                            <span class="role">Software
+                                                developer</span>
+                                            <span class="company_name">FERCHAU
+                                                GmbH (Pulsotronic GmbH
+                                                &amp Co. KG)</span>
+                                            <p class="job_description">Developed
+                                                a software module to preprocess,
+                                                cleanse, and apply statistical
+                                                and frequency analysis to
+                                                digital audio signals.</p>
+                                        </div>
+                                    </div>
+
+                                    <div class="career_container right">
+                                        <div class="content">
+                                            <span class="period">2020 -
+                                                2022</span>
+                                            <span class="role">Research
+                                                assistant on research
+                                                projects</span>
+                                            <span class="company_name">TU
+                                                Bergakademie Freiberg</span>
+                                            <p class="job_description">
+                                                DiP-iT (Digital Programming in
+                                                Teams) research projects</p>
+                                        </div>
+                                    </div>
+                                    <h3>Education</h3>
+
+                                    <div class="career_container right">
+                                        <div class="content">
+                                            <span class="period">2023 -
+                                                2024</span>
+                                            <span class="role">Full Stack Web
+                                                Development Certificate
+                                                training</span>
+                                            <span
+                                                class="company_name">CarreerFoundry</span>
+                                            <p class="job_description">
+                                                900+ hours of immersive,
+                                                project-based training in
+                                                JavaScript, HTML, CSS, NodeJs,
+                                                React.js, Angular, React Native,
+                                                DataBase, and more.</p>
+                                            <!-- <p class="job_description">
+                                                Gain hands-on experience by
+                                                completing 6+ projects in MERN &
+                                                MEAN tech stacks, React Native,
+                                                plus other web development and
+                                                deployment tools.</p> -->
+                                        </div>
+                                    </div>
+                                    <div class="career_container right">
+                                        <div class="content">
+                                            <span class="period">2019 -
+                                                2022</span>
+                                            <span class="role">M.S. in Applied
+                                                Computer Science</span>
+                                            <span class="company_name">TU
+                                                Bergakademie Freiberg.</span>
+
+                                        </div>
+                                    </div>
+                                    <div class="career_container right">
+                                        <div class="content">
+                                            <span class="period">2019 -
+                                                2022</span>
+                                            <span class="role">B.S. in Computer
+                                                Engineering</span>
+                                            <span class="company_name">Eritrean
+                                                Institute of Technology,
+                                                Mai-Nefhi</span>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!-- <ul>
                                     <li><span>2023</span> Software
                                         developer,
                                         FERCHAU GmbH (Pulsotronic GmbH
@@ -300,7 +382,7 @@
                                         Engineering, Eritrean Institute of
                                         Technology, Mai-Nefhi</li>
 
-                                </ul>
+                                </ul> -->
                             </div>
                         </div>
                     </div>
