refactor the skills section UI design

--- a/index.html
+++ b/index.html
@@ -140,25 +140,22 @@
                 <div class="career-column">
                     <div class="left-column">
                         <div class="skills-header">
-                            <h3>What I do</h3>
-                            <p>I enjoy the process of
-                                designing, building, testing, and deploying
-                                complete
-                                web
-                                applications from start to finish. Below are
-                                some of
-                                the
-                                skills, technologies, and tools I have
-                                experience
-                                with.
+                            <h4>My Expertise</h4>
+                            <!-- <h3>What I do</h3> -->
+                            <p>I find immense joy in solving complex problems
+                                while planning, developing, and delivering fully
+                                functional Software or application. My passion
+                                is fueled by mastering diverse technologies and
+                                skills. Here are the areas in which I have
+                                expertise:
                             </p>
                         </div>
                         <div class="dev-skill">
                             <h3>Front-end</h3>
                             <div class="description-box">
                                 <small> + </small>
-                                <p> Turn
-                                    UI/UX design into an actual web or app.
+                                <p> Transform UI/UX design into a real web or
+                                    application.
                                 </p>
                             </div>
                             <ul>
@@ -167,11 +164,11 @@
                                 <li>JavaScript</li>
                                 <li>React</li>
                                 <li>Angular</li>
-                                <li> React Native</li>
                                 <li>SASS/SCSS</li>
                                 <li> Bootstrap</li>
                                 <li> Redux</li>
                                 <li>Tailwind CSS</li>
+                                <li>Typescript</li>
                             </ul>
                         </div>
                         <div class="dev-skill">
@@ -200,13 +197,27 @@
                             </ul>
                         </div>
                         <div class="dev-skill">
-                            <h3>ML / Data processing</h3>
+                            <h3>Mobile App</h3>
+                            <div class="description-box">
+                                <small> + </small>
+                                <p>Develop a cross-platform mobile app with
+                                    React Native
+                                </p>
+                            </div>
+                            <ul>
+                                <li> React Native</li>
+                                <li>Expo</li>
+                                <li>Tailwind CSS</li>
+                                <li>JavaScript</li>
+                            </ul>
+                        </div>
+                        <div class="dev-skill">
+                            <h3>ML / Data Processing</h3>
                             <div class="description-box">
                                 <small> + </small>
                                 <p>
-                                    Data Preprocessing, Analysis, and
-                                    Visualization
-                                    for building a Machine learning model.
+                                    Preprocessing, analyzing data, and
+                                    developing machine learning models
                                 </p>
                             </div>
                             <ul>
@@ -226,11 +237,7 @@
                 <div class="career-column">
                     <div class="right-column">
                         <div class="skills-header">
-                            <h3>My Career</h3>
-                            <p>I have an M.Sc. in Applied Computer Science and
-                                specialized in full-stack web development
-                                through
-                                CareerFoundry's 900+ hours program.</p>
+                            <h4>My Career</h4>
                         </div>
                         <div class="career experience">
                             <!-- <h3>Experience</h3> -->
@@ -248,7 +255,7 @@
                                                 &amp Co. KG)</span>
                                             <p class="job_description">Developed
                                                 a software module to preprocess,
-                                                cleanse, and apply statistical
+                                                and apply statistical
                                                 and frequency analysis to
                                                 digital audio signals.</p>
                                         </div>
@@ -278,19 +285,14 @@
                                                 Development Certificate
                                                 training</span>
                                             <span
-                                                class="company_name">CarreerFoundry</span>
+                                                class="company_name">CareerFoundry,
+                                                Remote</span>
                                             <p class="job_description">
                                                 900+ hours of immersive,
                                                 project-based training in
                                                 JavaScript, HTML, CSS, NodeJs,
                                                 React.js, Angular, React Native,
                                                 DataBase, and more.</p>
-                                            <!-- <p class="job_description">
-                                                Gain hands-on experience by
-                                                completing 6+ projects in MERN &
-                                                MEAN tech stacks, React Native,
-                                                plus other web development and
-                                                deployment tools.</p> -->
                                         </div>
                                     </div>
                                     <div class="career_container right">
@@ -300,89 +302,34 @@
                                             <span class="role">M.S. in Applied
                                                 Computer Science</span>
                                             <span class="company_name">TU
-                                                Bergakademie Freiberg.</span>
+                                                Bergakademie Freiberg, Freiberg
+                                                Germany</span>
+                                            <p class="job_description">
+                                                Main Focus: AI, Distributed
+                                                Systems, Virtual Reality
+                                            </p>
 
                                         </div>
                                     </div>
                                     <div class="career_container right">
                                         <div class="content">
-                                            <span class="period">2019 -
-                                                2022</span>
+                                            <span class="period">2008 -
+                                                2013</span>
                                             <span class="role">B.S. in Computer
                                                 Engineering</span>
                                             <span class="company_name">Eritrean
                                                 Institute of Technology,
-                                                Mai-Nefhi</span>
+                                                Mai-Nefhi Eritrea</span>
+                                            <p class="job_description">
+                                                Main focus: Software
+                                                Engineering, Database,
+                                                Networking
+                                            </p>
+
                                         </div>
                                     </div>
                                 </div>
 
-                                <!-- <ul>
-                                    <li><span>2023</span> Software
-                                        developer,
-                                        FERCHAU GmbH (Pulsotronic GmbH
-                                        &amp Co. KG)</li>
-                                    <div class="description-box">
-                                        <small> + </small>
-                                        <p class="experience-detail">
-                                            Designed and developed a software
-                                            module to preprocess, cleanse, and
-                                            apply
-                                            statistical and frequency analysis
-                                            to digital audio
-                                            signals.
-                                        </p>
-                                    </div>
-                                    <li><span>2020 - 2022</span> Research
-                                        assistant
-                                        on research projects, TU Bergakademie
-                                        Freiberg.
-                                    </li>
-                                    <div class="description-box">
-                                        <small> + </small>
-                                        <p class="experience-detail"> DiP-iT
-                                            (Digital
-                                            Programming in Teams) research
-                                            projects.
-                                        </p>
-                                    </div>
-                                </ul>
-                            </div>
-                        </div>
-
-                        <div class="career education">
-                            <h3>Education</h3>
-                            <div class="contents">
-                                <ul>
-                                    <li><span>2023 - 2024</span> Certificate in
-                                        Full
-                                        Stack Web Development, CarreerFoundry
-                                    </li>
-                                    <div class="description-box">
-                                        <small> + </small>
-                                        <p class="experience-detail">
-                                            900+ hours of immersive,
-                                            project-based
-                                            training in JavaScript, HTML, CSS,
-                                            NodeJs, React.js, Angular, React
-                                            Native,
-                                            JQuery, AJAX, DataBase, and more.
-                                            <br>
-                                            Gain hands-on experience by
-                                            completing
-                                            6+ projects in MERN &amp; MEAN tech
-                                            stacks, React Native, plus other web
-                                            development and deployment tools.
-                                        </p>
-                                    </div>
-                                    <li><span>2019 - 2022</span> M.S. in Applied
-                                        Computer Science from TU Bergakademie
-                                        Freiberg </li>
-                                    <li><span>2008 - 2013</span>B.S. in Computer
-                                        Engineering, Eritrean Institute of
-                                        Technology, Mai-Nefhi</li>
-
-                                </ul> -->
                             </div>
                         </div>
                     </div>
